[tool.poetry]
name = "y"
version = "0.1.0"
description = "y"
authors = ["y"]
license = "y"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
torch = "^2.5.0"
opencv-python = "^4.10.0.84"
numpy = "^2.1.2"
gymnasium = "^1.0.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
